# CrewAI-Assignment

./: README.md  extractor.py  main.py  medical_analysis.db  pyproject.toml  requirements.txt  schema.py
agents/: medical_agents.py
crew/: medical_crew.py
database/: models.py  operations.py
tasks/: medical_tasks.py
tools/: medical_tools.py
