[project]
name = "crewai-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "crewai>=0.134.0",
    "crewai-tools>=0.48.0",
    "fastapi>=0.115.14",
    "flake8>=7.3.0",
    "google-search-results>=2.4.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.2.14",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "pydantic[email]>=2.11.7",
    "pymupdf>=1.26.1",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
